# compose1plus

./: .gitignore  Cargo.toml  build.sh  run.sh
cmpsc/: Cargo.toml
cmpsc/src/: command.rs  main.rs
cmpstr/: Cargo.toml
cmpstr/src/: commands.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  symbol.rs  term.rs
core/src/environment/: mod.rs  namespace.rs  package.rs  symbol.rs
core/src/terms/: combinator.rs  mod.rs  raw_term.rs  term.rs  value.rs
runtime/: main.c  values.c  values.h
runtime/include/: booleans.h  combinators.h  context.h  errors.h  lambdas.h  values.h
runtime/src/: combinators.c  context.c  lambdas.c  main.c  values.c
